--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NTFILE - رفع ملفات مع Firebase</title>
+  <title>NOVA TEAM</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
